# korus5

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  architecture_solution.docx  docker-compose.yaml  pyproject.toml
.github/workflows/: check-code.yml
config/: connections.json  variables.json
dags/: constants.py  dag.py  entrypoint_dag.py
dags/dds_layer/: dds_layer_transfer.py  dds_layer_transfer_const.py  dds_layer_transfer_constants.py
dags/dds_layer/sql/: create_schema.sql  query.sql
dags/dds_layer/sql/catalog/: query.sql
dags/dds_layer/sql/cv_dar/: query.sql
dags/dds_layer/sql/departments/: query.sql
dags/dds_layer/sql/employees/: query.sql
dags/dds_layer/sql/failed_entities/: query.sql
dags/dds_layer/sql/levels/: query.sql
dags/dds_layer/sql/position/: query.sql
dags/dds_layer/sql/skills/: query.sql
dags/dds_layer/sql/skills_group/: query.sql
dags/dds_layer/sql/skills_levels/: query.sql
dags/dm_dep_layer/: dm_dep_layer_transfer.py  dm_dep_layer_transfer_constants.py
dags/dm_dep_layer/sql/: create_schema.sql
dags/dm_dep_layer/sql/departments/: query.sql
dags/dm_dep_layer/sql/departments_statistic/: query.sql
dags/dm_dep_layer/sql/levels/: query.sql
dags/dm_dep_layer/sql/skill_groups/: query.sql
dags/dm_dep_layer/sql/skills/: query.sql
dags/dm_empl_layer/: dm_empl_layer_transfer.py  dm_empl_layer_transfer_constants.py
dags/dm_empl_layer/sql/departments/: query.sql
dags/dm_empl_layer/sql/employees/: query.sql
dags/dm_empl_layer/sql/employees_statistic/: query.sql
dags/dm_empl_layer/sql/levels/: query.sql
dags/dm_empl_layer/sql/positions/: query.sql
dags/dm_empl_layer/sql/skill_groups/: query.sql
dags/dm_empl_layer/sql/skills/: query.sql
dags/dm_layer/: dm_layer_transfer.py  dm_layer_transfer_const.py
dags/dm_layer/sql/: create_schema.sql  employees_statistic.sql
dags/dm_layer/sql/compare/: query.sql
dags/dm_layer/sql/complex_data/: query.sql
dags/dm_layer/sql/departments/: query.sql
dags/dm_layer/sql/employees/: query.sql
dags/dm_layer/sql/employees_new_skils_total/: query.sql
dags/dm_layer/sql/employees_statistic/: query.sql
dags/dm_layer/sql/levels/: query.sql
dags/dm_layer/sql/now/: query.sql
dags/dm_layer/sql/positions/: query.sql
dags/dm_layer/sql/skill_groups/: query.sql
dags/dm_layer/sql/skills/: query.sql
dags/ods_layer/: ods_layer_transfer.py  ods_layer_transfer_constants.py
dags/ods_layer/sql/: create_schema.sql
dags/ods_layer/sql/базы_данных/: query.sql  schema.sql
dags/ods_layer/sql/базы_данных_и_уровень_знаний_сотру/: query.sql  schema.sql
dags/ods_layer/sql/инструменты/: query.sql  schema.sql
dags/ods_layer/sql/инструменты_и_уровень_знаний_сотр/: query.sql  schema.sql
dags/ods_layer/sql/образование_пользователей/: query.sql  schema.sql
dags/ods_layer/sql/опыт_сотрудника_в_отраслях/: query.sql  schema.sql
dags/ods_layer/sql/опыт_сотрудника_в_предметных_обла/: query.sql  schema.sql
dags/ods_layer/sql/отрасли/: query.sql
dags/ods_layer/sql/платформы/: query.sql
dags/ods_layer/sql/платформы_и_уровень_знаний_сотруд/: query.sql  schema.sql
dags/ods_layer/sql/предметная_область/: query.sql
dags/ods_layer/sql/резюмедар/: query.sql  schema.sql
dags/ods_layer/sql/сертификаты_пользователей/: query.sql  schema.sql
dags/ods_layer/sql/сотрудники_дар/: query.sql  schema.sql
dags/stage_layer/: const.py  main.py
dags/stage_layer/sql/: truncate.sql
dags/task1/: dag.py
documentation/: architecture_schema.drawio  architecture_solution.docx  ods_layer.drawio
(+51 files in other folders)
